// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`editor item and client rules > captures addition, out-of-range updates/removals, order and field values 1`] = `
[
  {
    "accentColor": "#db8b1a",
    "clientId": 7,
    "currency": "EUR",
    "dueDate": "",
    "invoiceDate": "2026-09-30",
    "invoiceNumber": "INV-0099",
    "items": [
      {
        "currency": "EUR",
        "description": "One",
        "quantity": 2,
        "sortOrder": 8,
        "subText": "Blue",
        "tax": 10,
        "unitPrice": 250000,
      },
      {
        "currency": "USD",
        "description": "Two",
        "quantity": 1,
        "sortOrder": 3,
        "subText": "",
        "tax": 8.5,
        "unitPrice": 0.125,
      },
      {
        "description": "Three",
        "quantity": 1,
        "sortOrder": 1,
        "unitPrice": 500000,
      },
      {
        "currency": "EUR",
        "description": "",
        "quantity": 1,
        "sortOrder": 3,
        "unitPrice": 0,
      },
    ],
    "notes": " note ",
    "rawChat": "",
    "showAmounts": true,
    "status": "draft",
  },
  {
    "accentColor": "#db8b1a",
    "clientId": 7,
    "currency": "EUR",
    "dueDate": "",
    "invoiceDate": "2026-09-30",
    "invoiceNumber": "INV-0099",
    "items": [
      {
        "currency": "EUR",
        "description": "One",
        "quantity": 2,
        "sortOrder": 8,
        "subText": "Blue",
        "tax": 10,
        "unitPrice": 0,
      },
      {
        "currency": "USD",
        "description": "Two",
        "quantity": 1,
        "sortOrder": 3,
        "subText": "",
        "tax": 8.5,
        "unitPrice": 0.125,
      },
      {
        "description": "Three",
        "quantity": 1,
        "sortOrder": 1,
        "unitPrice": 500000,
      },
    ],
    "notes": " note ",
    "rawChat": "",
    "showAmounts": true,
    "status": "draft",
  },
  {
    "accentColor": "#db8b1a",
    "clientId": 7,
    "currency": "EUR",
    "dueDate": "",
    "invoiceDate": "2026-09-30",
    "invoiceNumber": "INV-0099",
    "items": [
      {
        "currency": "EUR",
        "description": "One",
        "quantity": 2,
        "sortOrder": 8,
        "subText": "Blue",
        "tax": 10,
        "unitPrice": 250000,
      },
      {
        "currency": "USD",
        "description": "Two",
        "quantity": 1,
        "sortOrder": 3,
        "subText": "",
        "tax": 12.5,
        "unitPrice": 0.125,
      },
      {
        "description": "Three",
        "quantity": 1,
        "sortOrder": 1,
        "unitPrice": 500000,
      },
    ],
    "notes": " note ",
    "rawChat": "",
    "showAmounts": true,
    "status": "draft",
  },
  {
    "accentColor": "#db8b1a",
    "clientId": 7,
    "currency": "EUR",
    "dueDate": "",
    "invoiceDate": "2026-09-30",
    "invoiceNumber": "INV-0099",
    "items": [
      {
        "currency": "EUR",
        "description": "One",
        "quantity": 2,
        "sortOrder": 8,
        "subText": "Blue",
        "tax": 10,
        "unitPrice": 250000,
      },
      {
        "currency": "USD",
        "description": "Two",
        "quantity": 1,
        "sortOrder": 3,
        "subText": "",
        "tax": 8.5,
        "unitPrice": 0.125,
      },
      {
        "description": "Three",
        "quantity": 1,
        "sortOrder": 1,
        "unitPrice": 500000,
      },
    ],
    "notes": " note ",
    "rawChat": "",
    "showAmounts": true,
    "status": "draft",
  },
  {
    "accentColor": "#db8b1a",
    "clientId": 7,
    "currency": "EUR",
    "dueDate": "",
    "invoiceDate": "2026-09-30",
    "invoiceNumber": "INV-0099",
    "items": [
      {
        "currency": "EUR",
        "description": "One",
        "quantity": 2,
        "sortOrder": 8,
        "subText": "Blue",
        "tax": 10,
        "unitPrice": 250000,
      },
      {
        "currency": "USD",
        "description": "Two",
        "quantity": 1,
        "sortOrder": 3,
        "subText": "",
        "tax": 8.5,
        "unitPrice": 0.125,
      },
      {
        "description": "Three",
        "quantity": 1,
        "sortOrder": 1,
        "unitPrice": 500000,
      },
    ],
    "notes": " note ",
    "rawChat": "",
    "showAmounts": true,
    "status": "draft",
  },
  {
    "accentColor": "#db8b1a",
    "clientId": 7,
    "currency": "EUR",
    "dueDate": "",
    "invoiceDate": "2026-09-30",
    "invoiceNumber": "INV-0099",
    "items": [
      {
        "currency": "USD",
        "description": "Two",
        "quantity": 1,
        "sortOrder": 3,
        "subText": "",
        "tax": 8.5,
        "unitPrice": 0.125,
      },
      {
        "description": "Three",
        "quantity": 1,
        "sortOrder": 1,
        "unitPrice": 500000,
      },
    ],
    "notes": " note ",
    "rawChat": "",
    "showAmounts": true,
    "status": "draft",
  },
  {
    "accentColor": "#db8b1a",
    "clientId": 7,
    "currency": "EUR",
    "dueDate": "",
    "invoiceDate": "2026-09-30",
    "invoiceNumber": "INV-0099",
    "items": [
      {
        "currency": "EUR",
        "description": "One",
        "quantity": 2,
        "sortOrder": 8,
        "subText": "Blue",
        "tax": 10,
        "unitPrice": 250000,
      },
      {
        "currency": "USD",
        "description": "Two",
        "quantity": 1,
        "sortOrder": 3,
        "subText": "",
        "tax": 8.5,
        "unitPrice": 0.125,
      },
      {
        "description": "Three",
        "quantity": 1,
        "sortOrder": 1,
        "unitPrice": 500000,
      },
    ],
    "notes": " note ",
    "rawChat": "",
    "showAmounts": true,
    "status": "draft",
  },
]
`;

exports[`editor item and client rules > preserves currency selection rules including zero/missing clients and mixed item currencies 1`] = `
[
  {
    "accentColor": "#db8b1a",
    "clientId": 7,
    "currency": "EUR",
    "dueDate": "",
    "invoiceDate": "2026-09-30",
    "invoiceNumber": "INV-0099",
    "items": [
      {
        "currency": "EUR",
        "description": "One",
        "quantity": 2,
        "sortOrder": 8,
        "subText": "Blue",
        "tax": 10,
        "unitPrice": 250000,
      },
      {
        "currency": "USD",
        "description": "Two",
        "quantity": 1,
        "sortOrder": 3,
        "subText": "",
        "tax": 8.5,
        "unitPrice": 0.125,
      },
      {
        "currency": "EUR",
        "description": "Three",
        "quantity": 1,
        "sortOrder": 1,
        "unitPrice": 500000,
      },
    ],
    "notes": " note ",
    "rawChat": "",
    "showAmounts": true,
    "status": "draft",
  },
  {
    "accentColor": "#db8b1a",
    "clientId": 8,
    "currency": "USD",
    "dueDate": "",
    "invoiceDate": "2026-09-30",
    "invoiceNumber": "INV-0099",
    "items": [
      {
        "currency": "USD",
        "description": "One",
        "quantity": 2,
        "sortOrder": 8,
        "subText": "Blue",
        "tax": 10,
        "unitPrice": 250000,
      },
      {
        "currency": "USD",
        "description": "Two",
        "quantity": 1,
        "sortOrder": 3,
        "subText": "",
        "tax": 8.5,
        "unitPrice": 0.125,
      },
      {
        "currency": "USD",
        "description": "Three",
        "quantity": 1,
        "sortOrder": 1,
        "unitPrice": 500000,
      },
    ],
    "notes": " note ",
    "rawChat": "",
    "showAmounts": true,
    "status": "draft",
  },
  {
    "accentColor": "#db8b1a",
    "clientId": 0,
    "currency": "EUR",
    "dueDate": "",
    "invoiceDate": "2026-09-30",
    "invoiceNumber": "INV-0099",
    "items": [
      {
        "currency": "EUR",
        "description": "One",
        "quantity": 2,
        "sortOrder": 8,
        "subText": "Blue",
        "tax": 10,
        "unitPrice": 250000,
      },
      {
        "currency": "USD",
        "description": "Two",
        "quantity": 1,
        "sortOrder": 3,
        "subText": "",
        "tax": 8.5,
        "unitPrice": 0.125,
      },
      {
        "description": "Three",
        "quantity": 1,
        "sortOrder": 1,
        "unitPrice": 500000,
      },
    ],
    "notes": " note ",
    "rawChat": "",
    "showAmounts": true,
    "status": "draft",
  },
  {
    "accentColor": "#db8b1a",
    "clientId": null,
    "currency": "EUR",
    "dueDate": "",
    "invoiceDate": "2026-09-30",
    "invoiceNumber": "INV-0099",
    "items": [
      {
        "currency": "EUR",
        "description": "One",
        "quantity": 2,
        "sortOrder": 8,
        "subText": "Blue",
        "tax": 10,
        "unitPrice": 250000,
      },
      {
        "currency": "USD",
        "description": "Two",
        "quantity": 1,
        "sortOrder": 3,
        "subText": "",
        "tax": 8.5,
        "unitPrice": 0.125,
      },
      {
        "description": "Three",
        "quantity": 1,
        "sortOrder": 1,
        "unitPrice": 500000,
      },
    ],
    "notes": " note ",
    "rawChat": "",
    "showAmounts": true,
    "status": "draft",
  },
  {
    "accentColor": "#db8b1a",
    "clientId": NaN,
    "currency": "EUR",
    "dueDate": "",
    "invoiceDate": "2026-09-30",
    "invoiceNumber": "INV-0099",
    "items": [
      {
        "currency": "EUR",
        "description": "One",
        "quantity": 2,
        "sortOrder": 8,
        "subText": "Blue",
        "tax": 10,
        "unitPrice": 250000,
      },
      {
        "currency": "USD",
        "description": "Two",
        "quantity": 1,
        "sortOrder": 3,
        "subText": "",
        "tax": 8.5,
        "unitPrice": 0.125,
      },
      {
        "description": "Three",
        "quantity": 1,
        "sortOrder": 1,
        "unitPrice": 500000,
      },
    ],
    "notes": " note ",
    "rawChat": "",
    "showAmounts": true,
    "status": "draft",
  },
  {
    "accentColor": "#db8b1a",
    "clientId": 0,
    "currency": "EUR",
    "dueDate": "",
    "invoiceDate": "2026-09-30",
    "invoiceNumber": "INV-0099",
    "items": [
      {
        "currency": "EUR",
        "description": "One",
        "quantity": 2,
        "sortOrder": 8,
        "subText": "Blue",
        "tax": 10,
        "unitPrice": 250000,
      },
      {
        "currency": "USD",
        "description": "Two",
        "quantity": 1,
        "sortOrder": 3,
        "subText": "",
        "tax": 8.5,
        "unitPrice": 0.125,
      },
      {
        "description": "Three",
        "quantity": 1,
        "sortOrder": 1,
        "unitPrice": 500000,
      },
    ],
    "notes": " note ",
    "rawChat": "",
    "showAmounts": true,
    "status": "draft",
  },
  {
    "accentColor": "#db8b1a",
    "clientId": 999,
    "currency": "EUR",
    "dueDate": "",
    "invoiceDate": "2026-09-30",
    "invoiceNumber": "INV-0099",
    "items": [
      {
        "currency": "EUR",
        "description": "One",
        "quantity": 2,
        "sortOrder": 8,
        "subText": "Blue",
        "tax": 10,
        "unitPrice": 250000,
      },
      {
        "currency": "USD",
        "description": "Two",
        "quantity": 1,
        "sortOrder": 3,
        "subText": "",
        "tax": 8.5,
        "unitPrice": 0.125,
      },
      {
        "description": "Three",
        "quantity": 1,
        "sortOrder": 1,
        "unitPrice": 500000,
      },
    ],
    "notes": " note ",
    "rawChat": "",
    "showAmounts": true,
    "status": "draft",
  },
]
`;

exports[`original split rules > captures exact limit, over-limit single items, zero, negative, tax and numbering 1`] = `
[
  [
    [],
    [
      {
        "invoiceNumber": "INV-0099",
        "items": [
          {
            "currency": "EUR",
            "description": "One",
            "quantity": 2,
            "sortOrder": 8,
            "subText": "Blue",
            "tax": 10,
            "unitPrice": 250000,
          },
          {
            "currency": "USD",
            "description": "Two",
            "quantity": 1,
            "sortOrder": 3,
            "subText": "",
            "tax": 8.5,
            "unitPrice": 0.125,
          },
        ],
        "totalJpy": 500000.125,
      },
      {
        "invoiceNumber": "INV-0100",
        "items": [
          {
            "description": "Three",
            "quantity": 1,
            "sortOrder": 1,
            "unitPrice": 500000,
          },
        ],
        "totalJpy": 500000,
      },
    ],
    [
      {
        "invoiceNumber": "INV-0099",
        "items": [
          {
            "description": "Over",
            "quantity": 2,
            "tax": 99,
            "unitPrice": 1000000,
          },
        ],
        "totalJpy": 2000000,
      },
    ],
    [
      {
        "invoiceNumber": "INV-0099",
        "items": [
          {
            "description": "Exact",
            "quantity": 1,
            "unitPrice": 1000000,
          },
        ],
        "totalJpy": 1000000,
      },
      {
        "invoiceNumber": "INV-0100",
        "items": [
          {
            "description": "Next",
            "quantity": 1,
            "unitPrice": 0.001,
          },
        ],
        "totalJpy": 0.001,
      },
    ],
    [
      {
        "invoiceNumber": "INV-0099",
        "items": [
          {
            "description": "Negative",
            "quantity": 1,
            "unitPrice": -1,
          },
          {
            "description": "Zero",
            "quantity": 0,
            "unitPrice": 100,
          },
        ],
        "totalJpy": -1,
      },
    ],
  ],
  [
    [],
    [
      {
        "invoiceNumber": "12345",
        "items": [
          {
            "currency": "EUR",
            "description": "One",
            "quantity": 2,
            "sortOrder": 8,
            "subText": "Blue",
            "tax": 10,
            "unitPrice": 250000,
          },
          {
            "currency": "USD",
            "description": "Two",
            "quantity": 1,
            "sortOrder": 3,
            "subText": "",
            "tax": 8.5,
            "unitPrice": 0.125,
          },
        ],
        "totalJpy": 500000.125,
      },
      {
        "invoiceNumber": "12346",
        "items": [
          {
            "description": "Three",
            "quantity": 1,
            "sortOrder": 1,
            "unitPrice": 500000,
          },
        ],
        "totalJpy": 500000,
      },
    ],
    [
      {
        "invoiceNumber": "12345",
        "items": [
          {
            "description": "Over",
            "quantity": 2,
            "tax": 99,
            "unitPrice": 1000000,
          },
        ],
        "totalJpy": 2000000,
      },
    ],
    [
      {
        "invoiceNumber": "12345",
        "items": [
          {
            "description": "Exact",
            "quantity": 1,
            "unitPrice": 1000000,
          },
        ],
        "totalJpy": 1000000,
      },
      {
        "invoiceNumber": "12346",
        "items": [
          {
            "description": "Next",
            "quantity": 1,
            "unitPrice": 0.001,
          },
        ],
        "totalJpy": 0.001,
      },
    ],
    [
      {
        "invoiceNumber": "12345",
        "items": [
          {
            "description": "Negative",
            "quantity": 1,
            "unitPrice": -1,
          },
          {
            "description": "Zero",
            "quantity": 0,
            "unitPrice": 100,
          },
        ],
        "totalJpy": -1,
      },
    ],
  ],
  [
    [],
    [
      {
        "invoiceNumber": "0001",
        "items": [
          {
            "currency": "EUR",
            "description": "One",
            "quantity": 2,
            "sortOrder": 8,
            "subText": "Blue",
            "tax": 10,
            "unitPrice": 250000,
          },
          {
            "currency": "USD",
            "description": "Two",
            "quantity": 1,
            "sortOrder": 3,
            "subText": "",
            "tax": 8.5,
            "unitPrice": 0.125,
          },
        ],
        "totalJpy": 500000.125,
      },
      {
        "invoiceNumber": "0002",
        "items": [
          {
            "description": "Three",
            "quantity": 1,
            "sortOrder": 1,
            "unitPrice": 500000,
          },
        ],
        "totalJpy": 500000,
      },
    ],
    [
      {
        "invoiceNumber": "0001",
        "items": [
          {
            "description": "Over",
            "quantity": 2,
            "tax": 99,
            "unitPrice": 1000000,
          },
        ],
        "totalJpy": 2000000,
      },
    ],
    [
      {
        "invoiceNumber": "0001",
        "items": [
          {
            "description": "Exact",
            "quantity": 1,
            "unitPrice": 1000000,
          },
        ],
        "totalJpy": 1000000,
      },
      {
        "invoiceNumber": "0002",
        "items": [
          {
            "description": "Next",
            "quantity": 1,
            "unitPrice": 0.001,
          },
        ],
        "totalJpy": 0.001,
      },
    ],
    [
      {
        "invoiceNumber": "0001",
        "items": [
          {
            "description": "Negative",
            "quantity": 1,
            "unitPrice": -1,
          },
          {
            "description": "Zero",
            "quantity": 0,
            "unitPrice": 100,
          },
        ],
        "totalJpy": -1,
      },
    ],
  ],
  [
    [],
    [
      {
        "invoiceNumber": "0001",
        "items": [
          {
            "currency": "EUR",
            "description": "One",
            "quantity": 2,
            "sortOrder": 8,
            "subText": "Blue",
            "tax": 10,
            "unitPrice": 250000,
          },
          {
            "currency": "USD",
            "description": "Two",
            "quantity": 1,
            "sortOrder": 3,
            "subText": "",
            "tax": 8.5,
            "unitPrice": 0.125,
          },
        ],
        "totalJpy": 500000.125,
      },
      {
        "invoiceNumber": "0002",
        "items": [
          {
            "description": "Three",
            "quantity": 1,
            "sortOrder": 1,
            "unitPrice": 500000,
          },
        ],
        "totalJpy": 500000,
      },
    ],
    [
      {
        "invoiceNumber": "0001",
        "items": [
          {
            "description": "Over",
            "quantity": 2,
            "tax": 99,
            "unitPrice": 1000000,
          },
        ],
        "totalJpy": 2000000,
      },
    ],
    [
      {
        "invoiceNumber": "0001",
        "items": [
          {
            "description": "Exact",
            "quantity": 1,
            "unitPrice": 1000000,
          },
        ],
        "totalJpy": 1000000,
      },
      {
        "invoiceNumber": "0002",
        "items": [
          {
            "description": "Next",
            "quantity": 1,
            "unitPrice": 0.001,
          },
        ],
        "totalJpy": 0.001,
      },
    ],
    [
      {
        "invoiceNumber": "0001",
        "items": [
          {
            "description": "Negative",
            "quantity": 1,
            "unitPrice": -1,
          },
          {
            "description": "Zero",
            "quantity": 0,
            "unitPrice": 100,
          },
        ],
        "totalJpy": -1,
      },
    ],
  ],
  [
    [],
    [
      {
        "invoiceNumber": "0000",
        "items": [
          {
            "currency": "EUR",
            "description": "One",
            "quantity": 2,
            "sortOrder": 8,
            "subText": "Blue",
            "tax": 10,
            "unitPrice": 250000,
          },
          {
            "currency": "USD",
            "description": "Two",
            "quantity": 1,
            "sortOrder": 3,
            "subText": "",
            "tax": 8.5,
            "unitPrice": 0.125,
          },
        ],
        "totalJpy": 500000.125,
      },
      {
        "invoiceNumber": "0001",
        "items": [
          {
            "description": "Three",
            "quantity": 1,
            "sortOrder": 1,
            "unitPrice": 500000,
          },
        ],
        "totalJpy": 500000,
      },
    ],
    [
      {
        "invoiceNumber": "0000",
        "items": [
          {
            "description": "Over",
            "quantity": 2,
            "tax": 99,
            "unitPrice": 1000000,
          },
        ],
        "totalJpy": 2000000,
      },
    ],
    [
      {
        "invoiceNumber": "0000",
        "items": [
          {
            "description": "Exact",
            "quantity": 1,
            "unitPrice": 1000000,
          },
        ],
        "totalJpy": 1000000,
      },
      {
        "invoiceNumber": "0001",
        "items": [
          {
            "description": "Next",
            "quantity": 1,
            "unitPrice": 0.001,
          },
        ],
        "totalJpy": 0.001,
      },
    ],
    [
      {
        "invoiceNumber": "0000",
        "items": [
          {
            "description": "Negative",
            "quantity": 1,
            "unitPrice": -1,
          },
          {
            "description": "Zero",
            "quantity": 0,
            "unitPrice": 100,
          },
        ],
        "totalJpy": -1,
      },
    ],
  ],
]
`;

exports[`save payload contracts > captures complete client snapshots, variants, tax, empty and nullish values 1`] = `
[
  {
    "accentColor": "#db8b1a",
    "clientId": 7,
    "clientSnapshot": {
      "company": null,
      "email": "fixed@example.invalid",
      "extraField": 42,
      "extraInfo": "keep",
      "id": 7,
      "name": "Luca",
    },
    "currency": "EUR",
    "dueDate": "",
    "invoiceDate": "2026-09-30",
    "invoiceNumber": "INV-0099",
    "items": [
      {
        "currency": "EUR",
        "description": "One",
        "quantity": 2,
        "sortOrder": 8,
        "subText": "Blue",
        "tax": 10,
        "unitPrice": 250000,
        "variant": "Blue",
      },
      {
        "currency": "USD",
        "description": "Two",
        "quantity": 1,
        "sortOrder": 3,
        "subText": "",
        "tax": 8.5,
        "unitPrice": 0.125,
        "variant": "",
      },
      {
        "description": "Three",
        "quantity": 1,
        "sortOrder": 1,
        "unitPrice": 500000,
        "variant": undefined,
      },
    ],
    "notes": " note ",
    "rawChat": "",
    "showAmounts": true,
    "status": "draft",
  },
  {
    "accentColor": "#db8b1a",
    "clientId": 999,
    "clientSnapshot": null,
    "currency": "EUR",
    "dueDate": "",
    "invoiceDate": "2026-09-30",
    "invoiceNumber": "INV-0099",
    "items": [
      {
        "currency": "EUR",
        "description": "One",
        "quantity": 2,
        "sortOrder": 8,
        "subText": "Blue",
        "tax": 10,
        "unitPrice": 250000,
        "variant": "Blue",
      },
      {
        "currency": "USD",
        "description": "Two",
        "quantity": 1,
        "sortOrder": 3,
        "subText": "",
        "tax": 8.5,
        "unitPrice": 0.125,
        "variant": "",
      },
      {
        "description": "Three",
        "quantity": 1,
        "sortOrder": 1,
        "unitPrice": 500000,
        "variant": undefined,
      },
    ],
    "notes": " note ",
    "rawChat": "",
    "showAmounts": true,
    "status": "draft",
  },
  {
    "accentColor": "#db8b1a",
    "clientId": 0,
    "clientSnapshot": {
      "id": 0,
      "name": "Zero",
    },
    "currency": "EUR",
    "dueDate": "",
    "invoiceDate": "2026-09-30",
    "invoiceNumber": "INV-0099",
    "items": [
      {
        "currency": "EUR",
        "description": "One",
        "quantity": 2,
        "sortOrder": 8,
        "subText": "Blue",
        "tax": 10,
        "unitPrice": 250000,
        "variant": "Blue",
      },
      {
        "currency": "USD",
        "description": "Two",
        "quantity": 1,
        "sortOrder": 3,
        "subText": "",
        "tax": 8.5,
        "unitPrice": 0.125,
        "variant": "",
      },
      {
        "description": "Three",
        "quantity": 1,
        "sortOrder": 1,
        "unitPrice": 500000,
        "variant": undefined,
      },
    ],
    "notes": " note ",
    "rawChat": "",
    "showAmounts": true,
    "status": "draft",
  },
  {
    "accentColor": "#db8b1a",
    "clientId": 7,
    "clientSnapshot": {
      "company": null,
      "email": "fixed@example.invalid",
      "extraField": 42,
      "extraInfo": "keep",
      "id": 7,
      "name": "Luca",
    },
    "currency": "EUR",
    "dueDate": "",
    "invoiceDate": "2026-09-30",
    "invoiceNumber": "INV-0099",
    "items": [],
    "notes": " note ",
    "rawChat": "",
    "showAmounts": true,
    "status": "draft",
  },
  {
    "accentColor": "#db8b1a",
    "clientId": 7,
    "clientSnapshot": {
      "company": null,
      "email": "fixed@example.invalid",
      "extraField": 42,
      "extraInfo": "keep",
      "id": 7,
      "name": "Luca",
    },
    "currency": "EUR",
    "dueDate": "",
    "invoiceDate": "2026-09-30",
    "invoiceNumber": "INV-0099",
    "items": [
      {
        "description": "Null",
        "quantity": 0,
        "subText": null,
        "tax": null,
        "unitPrice": 0,
        "variant": undefined,
      },
    ],
    "notes": " note ",
    "rawChat": "",
    "showAmounts": true,
    "status": "draft",
  },
]
`;

exports[`save payload contracts > captures split payload and its guard conditions 1`] = `
[
  undefined,
  undefined,
  undefined,
  {
    "accentColor": "#db8b1a",
    "baseInvoiceNumber": "INV-0099",
    "clientId": 7,
    "clientSnapshot": {
      "company": null,
      "email": "fixed@example.invalid",
      "extraField": 42,
      "extraInfo": "keep",
      "id": 7,
      "name": "Luca",
    },
    "currency": "EUR",
    "dueDate": "",
    "exchangeRate": 0,
    "invoiceDate": "2026-09-30",
    "notes": " note ",
    "rawChat": "",
    "showAmounts": true,
    "splits": [
      {
        "invoiceNumber": "INV-0099",
        "items": [
          {
            "currency": "EUR",
            "description": "One",
            "quantity": 2,
            "sortOrder": 8,
            "subText": "Blue",
            "tax": 10,
            "unitPrice": 250000,
            "variant": "Blue",
          },
          {
            "currency": "USD",
            "description": "Two",
            "quantity": 1,
            "sortOrder": 3,
            "subText": "",
            "tax": 8.5,
            "unitPrice": 0.125,
            "variant": "",
          },
        ],
      },
      {
        "invoiceNumber": "INV-0100",
        "items": [
          {
            "description": "Three",
            "quantity": 1,
            "sortOrder": 1,
            "unitPrice": 500000,
            "variant": undefined,
          },
        ],
      },
    ],
    "status": "draft",
  },
  undefined,
  {
    "accentColor": "#db8b1a",
    "baseInvoiceNumber": "INV-0099",
    "clientId": 7,
    "clientSnapshot": {
      "company": null,
      "email": "fixed@example.invalid",
      "extraField": 42,
      "extraInfo": "keep",
      "id": 7,
      "name": "Luca",
    },
    "currency": "EUR",
    "dueDate": "",
    "exchangeRate": 1.25,
    "invoiceDate": "2026-09-30",
    "notes": " note ",
    "rawChat": "",
    "showAmounts": true,
    "splits": [
      {
        "invoiceNumber": "INV-0099",
        "items": [
          {
            "currency": "EUR",
            "description": "One",
            "quantity": 2,
            "sortOrder": 8,
            "subText": "Blue",
            "tax": 10,
            "unitPrice": 250000,
            "variant": "Blue",
          },
          {
            "currency": "USD",
            "description": "Two",
            "quantity": 1,
            "sortOrder": 3,
            "subText": "",
            "tax": 8.5,
            "unitPrice": 0.125,
            "variant": "",
          },
        ],
      },
      {
        "invoiceNumber": "INV-0100",
        "items": [
          {
            "description": "Three",
            "quantity": 1,
            "sortOrder": 1,
            "unitPrice": 500000,
            "variant": undefined,
          },
        ],
      },
    ],
    "status": "draft",
  },
]
`;
